--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "mongoose": "^8.14.2",
+    "nodemailer": "^7.0.7",
     "openai": "^4.97.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
