--- a/package.json
+++ b/package.json
@@ -24,18 +24,23 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.14.2",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.7",
-    "openai": "^4.97.0"
+    "openai": "^4.97.0",
+    "pdf-parse": "^2.3.0"
   },
   "devDependencies": {
     "@types/cheerio": "^1.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.3",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.2",
+    "@types/pdf-parse": "^1.1.5",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
